# cmake-example

./: README.md
repo1/: CMakeLists.txt  README.md
repo1/Demo/: demo.cpp  demo.hpp  demo_b.cpp  demo_b.hpp
repo1/Hello/: CMakeLists.txt  hello.cpp  hello.hpp
repo1/Hello/SubHello/: subhello.cpp  subhello.hpp
repo2/: CMakeLists.txt  demo2.cpp
repo2/SubDemo/: subdemo.cpp  subdemo.hpp
